--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
   },
   "homepage": "https://github.com/rqt/ip#readme",
   "devDependencies": {
-    "alamode": "1.5.1",
+    "alamode": "1.6.0",
     "documentary": "1.20.1",
     "eslint-config-artdeco": "1.0.1",
+    "https-context": "1.0.3",
     "yarn-s": "1.1.0",
-    "zoroaster": "3.5.2"
+    "zoroaster": "3.6.6"
   },
   "dependencies": {
-    "rqt": "3.0.0"
+    "rqt": "3.0.1"
   }
 }
