--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "yarn t test/spec test/mask",
     "spec": "yarn t test/spec",
     "mask": "yarn t test/mask",
-    "test-build": "ALAMODE_ENV=test-build yarn test",
+    "test-compile": "ALAMODE_ENV=test-compile yarn test",
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
-    "compile": "NODE_DEBUG=doc doc documentary -o README.md",
+    "compile": "depack-dev src/depack.js -o compile/ip.js -a -c -p -s --source_map_include_content -O 2018",
     "b": "alamode src -o build -s",
     "d": "yarn-s d1 externs",
-    "d1": "typal types/index.js",
+    "d1": "typal types/index.js compile/index.js -c",
     "externs": "typal types/externs.js",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
@@ -43,12 +43,14 @@
   },
   "homepage": "https://github.com/rqt/ip#readme",
   "devDependencies": {
+    "@rqt/aqt": "^1.3.0",
     "alamode": "2.3.6",
     "documentary": "1.29.0",
     "eslint-config-artdeco": "1.0.1",
     "https-context": "1.0.3",
-    "yarn-s": "1.1.0",
+    "rqt": "^4.0.0",
     "typal": "^1.19.0",
+    "yarn-s": "1.1.0",
     "zoroaster": "4.1.1-alpha"
   },
   "srcDependencies": {
